manifests/sakabas_nextjs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakabas-nextjs
  labels:
    name: sakabas-nextjs
