manifests/sakabas_nextjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sakabas-nextjs
  namespace: sakabas-nextjs
  labels:
    app: sakabas-nextjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sakabas-nextjs
  template:
    metadata:
      labels:
        app: sakabas-nextjs
    spec:
      serviceAccountName: sakabas-nextjs
      containers:
         - name: sakabas-nextjs
           image: "us-central1-docker.pkg.dev/hello-world-352201/sakabas-nextjs/sakabas-nextjs:latest"
           imagePullPolicy: Always
           ports:
              - name: http
                containerPort: 3000
                protocol: TCP
           resources:
             requests:
               memory: "128Mi"
               cpu: "125m"
             limits:
               memory: "128Mi"
               cpu: "125m"
           securityContext:
             runAsNonRoot: true
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
             capabilities:
                drop:
                 - ALL
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
