manifests/sakabas_nextjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sakabas-nextjs
  namespace: sakabas-nextjs
  labels:
    app: sakabas-nextjs
spec:
  type: ClusterIP
  selector:
    app: sakabas-nextjs
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
