manifests/sakabas_nextjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: sakabas-nextjs
  labels:
    app: sakabas-nextjs
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "website-lb-ip"
    networking.gke.io/managed-certificates: "web-cert"
spec:
  rules:
    - host: sakabas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sakabas-nextjs
                port:
                  number: 80
